# MyBangs

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  ruf.toml
.github/: dependabot.yml
.github/workflows/: docker-image.yml
mybangs/: __init__.py  config.py
mybangs/static/: app.js  style.css
mybangs/templates/: base.html  false_bang.html  index.html
