[project]
name = "mybangs"
version = "0.1.2"
description = "Simple search wrapper✨ with customizable Bangs‼️"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
    "__pypackages__"
]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "I", "N", "UP", "C4", "DTZ", "LOG", "G", "SIM", "PTH", "Q"]
ignore = ["N999"]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
